--- a/.github/workflows/docker-build.yaml.yml
+++ b/.github/workflows/docker-build.yaml.yml
@@ -15,12 +15,12 @@ jobs:
       - name: Checkout resource
         uses: actions/checkout@v4
 
-      - name: Set up Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 23
-      - name: Install Dependencies
-        uses: npm install
+#      - name: Set up Node
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: 23
+#      - name: Install Dependencies
+#        uses: npm install
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
