--- a/.github/workflows/docker-build.yaml.yml
+++ b/.github/workflows/docker-build.yaml.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Login to Docker Registry
         uses: docker/login-action@v3
         with:
-          registry: ghrc.io
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
