--- a/.github/workflows/docker-build.yaml.yml
+++ b/.github/workflows/docker-build.yaml.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CUSTOM_TOKEN }}
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
