--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "html2pdf.js": "^0.12.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
